[project]
name = "playlist-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "autoevals>=0.0.130",
    "braintrust[cli]>=0.4.2",
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "openai>=2.14.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.40.0",
]
